zero-schema-macros/tests/ui/fail/22_collision_layout.rs
use zero_schema_macros::zero;

#[zero]
struct LayoutCollision {
    LAYOUT: u8,
}

fn main() {}
