zero-schema-macros/tests/ui/fail/22_collision_layout.stderr
error: generated zero-schema name collision for `LAYOUT`
 --> tests/ui/fail/22_collision_layout.rs:5:5
  |
5 |     LAYOUT: u8,
  |     ^^^^^^
